--- a/electrical_calculations/circuits/templates/circuits/calculate.html
+++ b/electrical_calculations/circuits/templates/circuits/calculate.html
@@ -6,12 +6,25 @@
     <div class="row">
         <div class="col-md-3">
             <h3>Calculate</h3>
+            <div class="btn-group-vertical w-75 py-2 mb-4">
+                <p class="text-primary text-center mb-2">Free Mode</p>
+                <input type="button" class="btn btn-primary mb-2 calc_btn Voltage" value="Voltage" data-function="calc_Voltage">
+                <input type="button" class="btn btn-primary mb-2 calc_btn Current" value="Current" data-function="calc_Current">
+                <input type="button" class="btn btn-primary mb-2 calc_btn Resistance" value="Resistance" data-function="calc_Resistance">
+            </div>
+        
             <div class="btn-group-vertical w-75">
+                <p class="text-primary text-center mb-2">Paid Mode</p>
                 <input type="button" class="btn btn-primary mb-2 calc_btn" value="Power Triangle" data-function="power_triangle">
                 <input type="button" class="btn btn-primary mb-2 calc_btn" value="Phasor" data-function="phasor">
+                <input type="button" class="btn btn-primary mb-2 calc_btn" value="Off-Grid Solar Design" data-function="off_grid_solar_design">
+                <input type="button" class="btn btn-primary mb-2 calc_btn" value="Grid-Tie Solar Design" data-function="grid_tie_solar_design">
+                <input type="button" class="btn btn-primary mb-2 calc_btn" value="Wire Ampacity" data-function="wire_ampacity">
+                <input type="button" class="btn btn-primary mb-2 calc_btn" value="Voltage Drop Calculations" data-function="voltage_drop_calculations">
                 <input type="button" class="btn btn-secondary mb-2 calc_btn" value="Under Development" data-function="" disabled>
             </div>
         </div>
+        
         
         
         <div class="col-md-9">
@@ -24,6 +37,46 @@
             
             <div id="alert-container"></div>
             <!-- Message alert -->
+
+
+            <div class="calc_Voltage border p-3" hidden>
+                <h4>Voltage</h4>
+                <div class="mb-3">
+                    <input type="number" class="form-control" name="vol_calc_current" placeholder="Current">
+                </div>
+                <div class="mb-3">
+                    <input type="number" class="form-control" name="vol_calc_resistance" placeholder="Resistance">
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-success vol_calc_btn">Calculate</button>
+                </div>
+            </div>
+            <div class="calc_Current border p-3" hidden>
+                <h4>Current</h4>
+                <div class="mb-3">
+                    <input type="number" class="form-control" name="cur_calc_voltage" placeholder="Voltage">
+                </div>
+                <div class="mb-3">
+                    <input type="number" class="form-control" name="cur_calc_resistance" placeholder="Resistance">
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-success cur_calc_btn">Calculate</button>
+                </div>
+            </div>
+            <div class="calc_Resistance border p-3" hidden>
+                <h4>Resistance</h4>
+                <div class="mb-3">
+                    <input type="number" class="form-control" name="res_calc_voltage" placeholder="Voltage">
+                </div>
+                <div class="mb-3">
+                    <input type="number" class="form-control" name="res_calc_current" placeholder="Current">
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-success res_calc_btn">Calculate</button>
+                </div>
+            </div>
+
+
             
             <div class="power_triangle border p-3" hidden>
                 <h4>Power Triangle</h4>
@@ -86,7 +139,6 @@
             <div id="output" class="mt-4">
                 {% if display %}
                     <div class="power_triangle_output border p-3">
-
                         {% if power_triangle %}
                             <div class="px-4">
                                 <div hidden data-diagram-img="{{ plot_image }}"></div>
@@ -95,7 +147,6 @@
                                 <img src="data:image/png;base64,{{ plot_image }}" alt="Power Triangle Plot" class="img-fluid">
                             </div>
                         {% endif %}
-
                         {% if phasor_diagram %} 
                             <div class="px-4">
                                 <div hidden data-diagram-img="{{ plot_image }}"></div>
@@ -104,13 +155,15 @@
                                 <img src="data:image/png;base64,{{ plot_image }}" alt="Phsor Diagram Plot" class="img-fluid">
                             </div>
                         {% endif %}
-                        
-
                         <form class="mt-3 save_calculation_form">
                             <button id="save_calculation_button" class="btn btn-success">Save</button>
                         </form>
                     </div>
                 {% endif %}
+            
+                <!-- Free Version Output -->
+                <div class="free_version_output" hidden></div>
+
             </div>
         </div>
     </div>
