--- a/electrical_calculations/circuits/templates/circuits/layout.html
+++ b/electrical_calculations/circuits/templates/circuits/layout.html
@@ -51,7 +51,7 @@
                                 {% endif %}
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Electrical Theory</a>
+                                <a class="nav-link" href="{% url 'electrical_theory' %}">Electrical Theory</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'about' %}">About</a>
