--- a/electrical_calculations/circuits/templates/circuits/profile.html
+++ b/electrical_calculations/circuits/templates/circuits/profile.html
@@ -28,6 +28,9 @@
             </div>
         </div>
         <hr>
+        <div>
+            Under Development (more features)
+        </div>
     </div>
 {% endblock %}
 
