adds contact us messages saved to db and notification at superuser home page

--- a/electrical_calculations/circuits/static/circuits/styles.css
+++ b/electrical_calculations/circuits/static/circuits/styles.css
@@ -48,3 +48,15 @@ html, body {
 .hidden {
     display: none;
 }
+
+
+
+.bell-hover {
+    padding: 10px; 
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+.bell-hover:hover {
+    cursor: pointer; 
+}
