--- a/electrical_calculations/circuits/templates/circuits/about.html
+++ b/electrical_calculations/circuits/templates/circuits/about.html
@@ -53,22 +53,23 @@
     <section class="mb-3 contact-information-section" hidden>
         <div class="p-4 border container">
             <h4>Contact Us</h4>
-            <form action="" method="post">
+            <form action="{% url 'about' %}" method="post">
+                {% csrf_token %}
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
                 </div>
                 <div class="form-group">
                     <label for="subject">Subject</label>
-                    <input type="text" class="form-control" id="subject" placeholder="Enter the subject">
+                    <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter the subject" required>
                 </div>
                 <div class="form-group">
                     <label for="message">Message</label>
-                    <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
+                    <textarea class="form-control" id="message" name="message" rows="5" placeholder="Enter your message" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary mt-3">Submit</button>
             </form>
