--- a/electrical_calculations/circuits/templates/circuits/layout.html
+++ b/electrical_calculations/circuits/templates/circuits/layout.html
@@ -10,6 +10,7 @@
         {% if title %} {{ title }} {% else %} Document {% endif %}
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{% static 'circuits/styles.css' %}">
     <script src="{% static 'circuits/home.js' %}" defer></script>
     <script src="{% static 'circuits/calculate.js' %}" defer></script>
@@ -57,7 +58,16 @@
                                 <a class="nav-link" href="{% url 'about' %}">About</a>
                             </li>
                         </ul>
+
+                        <span class="navbar-text mx-4 px-4 user_query_messages_span">
+                            {% if user.is_superuser %}
+                                <i class="fas fa-bell fa-lg bell-hover"></i> 
+                                <span class="badge badge-danger" style="background-color: #ff5733;"> 0 </span>
+                            {% endif %}
+                        </span>
+
                         <span class="navbar-text">
+                            
                             {% if user.is_authenticated %}
                                 <a href="{% url 'logout_user' %}" class="btn btn-outline-primary">Logout</a>
                             {% endif %}
@@ -73,6 +83,13 @@
             {% if message %}
                 <div class="alert alert-info">
                     <small>{{ message }}</small>
+                </div>
+            {% endif %}
+            {% if messages %}
+                <div class="alert alert-info">
+                    {% for message in messages %}
+                        <small>{{ message }}</small>
+                    {% endfor %}
                 </div>
             {% endif %}
         </div>
