--- a/electrical_calculations/circuits/templates/circuits/layout.html
+++ b/electrical_calculations/circuits/templates/circuits/layout.html
@@ -30,7 +30,7 @@
                     {% if user.is_authenticated %}
                         <a class="navbar-brand" href="{% url 'home' %}">{{ user.username.upper }}</a>
                     {% else %}
-                        <a class="navbar-brand" href="{% url 'user_login' %}">Electrical Engineering</a>
+                        <a class="navbar-brand" href="{% url 'user_login' %}">Electrical Calculations</a>
                     {% endif %}
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,11 @@
                                 {% endif %}
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'electrical_theory' %}">Electrical Theory</a>
+                                {% if user.is_authenticated %}
+                                    <a class="nav-link" href="{% url 'electrical_theory' %}">Electrical Theory</a>
+                                {% else %}
+                                    <a class="nav-link disabled" href="{% url 'electrical_theory' %}">Electrical Theory</a>
+                                {% endif %}
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'about' %}">About</a>
