adds help sample page

--- a/electrical_calculations/circuits/templates/circuits/theory.html
+++ b/electrical_calculations/circuits/templates/circuits/theory.html
@@ -1,7 +1,7 @@
 {% extends "circuits/layout.html" %}
 
 {% block body %}
-<div class="container mt-4">
+<div class="container my-4">
     <div class="card shadow">
         <div class="card-header bg-primary text-white text-center">
             <h3>Understanding Fault Calculations in Electrical Engineering</h3>
