--- a/electrical_calculations/circuits/templates/circuits/contacted_mgs.html
+++ b/electrical_calculations/circuits/templates/circuits/contacted_mgs.html
@@ -1,7 +1,7 @@
 {% extends "circuits/layout.html" %}
 
 {% block body %}
-<div class="container mt-2">
+<div class="container mt-2 mb-4">
     <div class="card">
         <div class="card-header bg-primary text-white">
             <h5 class="mb-0">Contact Us - Concerns</h5>
@@ -11,7 +11,7 @@
                 <ul class="list-group list-group-flush">
                     {% for concern in contact_us %}
                         <li class="concern_email_lists list-group-item concern-item {% if concern.is_read %}read{% else %}unread{% endif %}"
-                            name="{{ concern.name }}"
+                            name="{{ concern.id }}"
                             >
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
